2014-06-26  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_numa_memory():
	    - Fix for systems using old numa libraries (RHEL5). This should
	      really fix LP: #1333194.
	  - show_security_module():
	    - Corrected SELinux checking code.
	    - Added MLS detail.
	  - show_shared_mem_linux():
	    - Compiler appeasement.
	    - Added 'swap_attempts' and 'swap_successes' (apparently now unused,
	      but displayed for completeness).
	  - show_msg_queues_linux(): Compiler appeasement.
	* src/procenv.h:
	  - PROCENV_FORMAT_VERSION: Bumped to v8.
	  - Added PROCENV_NUMA_BITMASK_ISSET() macro to handle both old and new
	    libnuma API's.

2014-06-25  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - get_mtu(): Ensure unsigned long used for ioctl(2) request parameter
	    (caught by FreeBSD's "WARNING ioctl sign-extension ioctl" console
	    message).
	  - get_mac_address(): As above.
	  - show_uname(): Handle unset uts.domainname without an
	    assertion to cope on OpenSuSE 13.1 systems.

2014-06-24  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Add header checks for selinux and apparmor (LP: #1333182).
	* procenv.spec.in: Added 'libselinux-devel' to BuildRequires.
	* src/Makefile.am: Use $(top_builddir) and $(subdir) rather than
	  $(abs_builddir) since the RHEL5 / Centos 5 version of automake don't
	  define the latter.
	* src/procenv.c:
	  - Fix building on RHEL5 / Centos 5 by guarding undefined personality
	    symbols (LP: #1333194).
	  - Guard code based on CPU_ALLOC(3) availability.
	  - Guard capabilities, SELinux and AppArmor code.
	  - show_numa_memory(): Use entry() rather than show(), the latter of
	    which could have cause invalid formatted output if the NUMA policy
	    could not be queried.
	  - show_sizeof(): Add missing typedefs from stdint.h.
	* src/procenv.h: SELinux and capability guards.
	* src/tests/check_all_args.in:
	  - Don't die if JSON or XML checker are unavailable - just run